--- a/_includes/adsense.html
+++ b/_includes/adsense.html
@@ -1,10 +1,9 @@
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- alarmes.pt-responsive -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-1916739305935270"
-     data-ad-slot="4929051230"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
+<script type="text/javascript">
+<!--
+var netlucro_color_bg="ffffff";
+var netlucro_width="300";
+var netlucro_height="250";
+var netlucro_rotate="B";
+//-->
 </script>
+<script type="text/javascript" src="http://nucleo.netlucro.com/ad/22560/1319/"></script>
