--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,13 @@
 <header>
   <h1><a href="/">Alarmes.pt</a></h1>
   <p>A melhor defesa é a prevenção.</p>
-  {% include adsense.html %}
+
+  <div class="header-banner-large">
+    {% include adsense.html %}
+  </div>
+
+  <div class="header-banner-small">
+    {% include ad_block.html %}
+  </div>
   <!-- <div class="fb-like-box" data-href="https://www.facebook.com/pages/Alarmespt/534693383331888" data-colorscheme="light" data-show-faces="false" data-header="false" data-stream="false" data-show-border="false"></div> -->
 </header>
